[tool.poetry]
name = "rps"
version = "0.1.0"
description = ""
authors = ["ReXase27 <claukonstantin@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
ruff = "^0.0.277"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
